--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_above="@+id/fragment_review_button"
         android:background="@color/white"
         android:orientation="vertical">
 
@@ -37,9 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@color/white"
-        android:layout_below="@+id/fragment_review_linearLayout"
+        android:padding="7dp"
+        android:background="@drawable/background_button"
+        android:layout_centerVertical="true"
+        android:clickable="true"
         android:src="@android:drawable/ic_media_pause" />
 
 
