--- a/app/src/main/res/layout/activity_flash.xml
+++ b/app/src/main/res/layout/activity_flash.xml
@@ -8,6 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lumbralessoftware.colloquialisms.activities.FlashActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/activity_flash_title"
+        android:src="@drawable/icon_flash"/>
     <com.lumbralessoftware.colloquialisms.views.CustomTextView
         android:id="@+id/activity_flash_title"
         style="@style/TextNormalStyle"
